packages/typ/tests/fixtures/diagnostics/0895_gadt_packed_branch_result_mismatch_04.ml.expected
File "0895_gadt_packed_branch_result_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0895_gadt_packed_branch_result_mismatch_04 is not a valid module name.

File "0895_gadt_packed_branch_result_mismatch_04.ml", line 9, characters 33-34:
9 |   | Pack_delta (Bool_delta b) -> b
                                     ^
Error: The value b has type bool but an expression was expected of type int
